# jmake

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  setup.cfg
src/jmake/: __init__.py  generator.py  jmake.py  scriptenv.py  utils.py
src/jmake/builtin/: __init__.py  vulkan.py
