[project]
name = "jmake"
description = "C++ build system"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dynamic = [ "version" ]

[project.urls]
"Homepage" = "https://github.com/DanDanCool/jmake"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
